# booglanim

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: main.yml
src/: anim.ts  character.ts  editor_default.template  global.d.ts  main.html  main.ts  obj.ts  point.ts  resources.ts  styles.css  world.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/shaders/: color.wgsl  img.wgsl  screen.wgsl
src-tauri/src/: app_data.rs  color.rs  frame.rs  interface.rs  main.rs  request_handlers.rs  signals.rs
src-tauri/src/renderer/: mod.rs  pipelines.rs  render_data.rs  renderer.rs  renderers.rs  shader_structs.rs  texture.rs  video.rs
src/character_editors/: animate.html  animate.ts  character_interface_utils.ts  create.html  create.ts
