[package]
name = "booglanim"
version = "0.0.2"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [
    "dialog-all",
    "path-all",
    "protocol-asset",
    "fs-all",
    "shell-open", 
    "devtools"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winit = "0.28.7"
env_logger = "0.10.0"
log = "0.4.20"
image = "0.24.7"
wgpu = "0.17.1"
pollster = "0.3.0"
anyhow = { version = "1.0.75", features = ["backtrace"] }
base64-simd = "0.8.0"
dirs = "5.0.1"
bytemuck = { version = "1.14.0", features = ["derive"] }
itertools = "0.11.0"
futures-intrusive = "0.5.0"
# using this version of video-rs because needed to update ffmpeg-next dependency
# from 6.0.0 -> 6.1.0 to compile on windows.
video-rs = { git = 'https://github.com/booglycodes/video-rs.git' }
lyon = "1.0.1"
ffmpeg-next = "6.1.1"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


[profile.dev]
opt-level = 3
